--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,7 +11,9 @@ body {
    background-color: #eee;
   }
   input, button{
-      appearance: none;
+      -webkit-appearance: none;
+         -moz-appearance: none;
+              appearance: none;
       border: none;
       outline: none;
       background: none;
@@ -94,7 +96,11 @@ h4{
 }
 #message_send{
     
-    appearance: none;
+    -webkit-appearance: none;
+    
+       -moz-appearance: none;
+    
+            appearance: none;
     width: 100px;
     background-color: #0c6cb1;
     padding:4px 8px;
